--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
