--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,8 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
